--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             class=""></i>Real-Estate</h1> -->
                     <img src="img/logo/intelligent-realtors.png" alt="Logo"
                         width="150px"
-                        style="background-color: antiquewhite; border-radius: 12px; padding: 10px;">
+                        style="background-color:white; border-radius: 12px; padding: 10px;">
                 </a>
                 <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
