--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                                 href>Read More</a>
                         </div>
                         <div class="col-lg-6"
-                            style="display: flex; justify-content: center;">
+                            style="display: flex; justify-content:center;">
                             <div class="h-100">
                                 <div class="frame">
                                     <img src="img/about-imgs.jpg"
@@ -591,7 +591,7 @@
                                         class="big-img shadow-lg">
                                     <img src="img/about-imgs.jpg"
                                         alt="Small Image"
-                                        class="small-img">
+                                        class="small-img img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -988,12 +988,13 @@
             <div class="container-fluid about py-5">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6"
+                            style="display: flex; justify-content: center;">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.4119889742933!2d77.37474657475637!3d28.61741197567303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5be306febdb%3A0xa25f25cb323b6eab!2sAAJneeti%20Connect%20Ltd.!5e0!3m2!1sen!2sin!4v1756894813367!5m2!1sen!2sin"
                                 width="460"
                                 height="460"
-                                class="shadow p-2"
+                                class="shadow p-2 map-img"
                                 style="border:0.8px solid gray; border-radius: 15px; "
                                 allowfullscreen loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
