--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                                         class="big-img shadow-lg">
                                     <img src="img/about-imgs.jpg"
                                         alt="Small Image"
-                                        class="small-img img-fluid">
+                                        class="small-img img-fluid d-none d-sm-block">
                                 </div>
                             </div>
                         </div>
