--- a/index.html
+++ b/index.html
@@ -63,40 +63,32 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html"
+                        <a href="#"
                             class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="services.html"
-                            class="nav-item nav-link">Services</a>
-                        <a href="packages.html"
-                            class="nav-item nav-link">Packages</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle"
-                                data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu m-0">
-                                <a href="destination.html"
-                                    class="dropdown-item">Destination</a>
-                                <a href="tour.html"
-                                    class="dropdown-item">Explore Tour</a>
-                                <a href="booking.html"
-                                    class="dropdown-item">Travel Booking</a>
-                                <a href="gallery.html" class="dropdown-item">Our
-                                    Gallery</a>
-                                <a href="guides.html"
-                                    class="dropdown-item">Travel Guides</a>
-                                <a href="testimonial.html"
-                                    class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404
-                                    Page</a>
-                            </div>
-                        </div>
-                        <a href="contact.html"
+                        <a href="#about" class="nav-item nav-link">About</a>
+                        <a href="#amenities"
+                            class="nav-item nav-link">Amenities</a>
+                        <a href="#gallery"
+                            class="nav-item nav-link">Gallery</a>
+                        <a href="#highlights"
+                            class="nav-item nav-link">Highlights</a>
+                        <a href="#floorplan"
+                            class="nav-item nav-link">Floor Plan</a>
+                        <a href="#price"
+                            class="nav-item nav-link">Price</a>
+
+                        <a href="#location"
+                            class="nav-item nav-link">Location</a>
+
+                        <a href="#contact"
                             class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href
-                        class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book
-                        Now</a>
+                    <a href="#contactmodal"
+                        data-bs-toggle="modal"
+                        data-bs-target="#contactModal"
+                        class=" btn btn-primary rounded-pill py-2 px-4
+                        ms-lg-4">Get
+                        In Touch</a>
                 </div>
             </nav>
 
@@ -323,8 +315,148 @@
             <!-- </div> -->
             <!-- Navbar & Hero End -->
 
+            <!-- mobile contact form start -->
+            <div class="contacts-form mt-2 d-block d-sm-none">
+                <h2 class="text-white mb-3">Book A Perfect
+                    Apartment</h2>
+                <p class="text-white mb-4">Get <span
+                        class="text-warning">50% Off</span>
+                    On Your
+                    First awesome Property With aajneeti.
+                    Get
+                    More Deal
+                    Offers Here.</p>
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-12">
+                            <div class="form-floating">
+                                <input type="text"
+                                    class="form-control bg-transparent border-1"
+                                    id="name"
+                                    placeholder="Your Name">
+                                <label for="name">Your
+                                    Name</label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-floating">
+                                <input type="email"
+                                    class="form-control bg-transparent border-1"
+                                    id="email"
+                                    placeholder="Your Email">
+                                <label for="email">Your
+                                    Email</label>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-floating">
+                                <input type="number"
+                                    class="form-control bg-transparent border-1"
+                                    id="phone"
+                                    placeholder="Your Phone Number">
+                                <label for="phone">Your
+                                    Phone
+                                    number</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button
+                                class="btn btn-primary back-color text-dark w-100 py-3"
+                                type="submit">Book
+                                Now</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- mobile contact form end -->
+
+            <!-- Contact Form Modal -->
+            <div class="modal fade" id="contactModal" tabindex="-1"
+                aria-labelledby="contactModalLabel" aria-hidden="true">
+                <div
+                    class="modal-dialog modal-dialog-centered modal-lg"><!-- modal-lg for wider popup -->
+                    <div class="modal-content rounded-3 border-0 shadow">
+
+                        <!-- Close Button -->
+                        <button type="button" class="btn-close ms-auto m-2"
+                            data-bs-dismiss="modal" aria-label="Close"></button>
+
+                        <!-- Modal Body -->
+                        <div class="modal-body p-0">
+                            <div class="d-flex ">
+
+                                <!-- Left Image -->
+                                <div class="popup-img d-none d-sm-block">
+                                    <img src="img/packages-3.jpg" alt="form"
+                                        class="shadow  "
+                                        style="object-fit:cover;" />
+                                </div>
+
+                                <!-- Right Form -->
+                                <div class="right-form px-4 pb-4 flex-grow-1">
+                                    <h4 class="text-black mb-3">Book A Perfect
+                                        Apartment</h4>
+                                    <p class="text-black mb-2">
+                                        Get <span class="text-warning">50%
+                                            Off</span>
+                                        On Your First awesome Property With
+                                        aajneeti.
+                                        Get More Deal Offers Here.
+                                    </p>
+
+                                    <form>
+                                        <div class="row g-3">
+                                            <div class="col-md-12">
+                                                <div class="form-floating">
+                                                    <input type="text"
+                                                        class="form-control bg-transparent border-1"
+                                                        id="name"
+                                                        placeholder="Your Name">
+                                                    <label for="name">Your
+                                                        Name</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-12">
+                                                <div class="form-floating">
+                                                    <input type="email"
+                                                        class="form-control bg-transparent border-1"
+                                                        id="email"
+                                                        placeholder="Your Email">
+                                                    <label for="email">Your
+                                                        Email</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-md-12">
+                                                <div class="form-floating">
+                                                    <input type="number"
+                                                        class="form-control bg-transparent border-1"
+                                                        id="phone"
+                                                        placeholder="Your Phone Number">
+                                                    <label for="phone">Your
+                                                        Phone number</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-12">
+                                                <button
+                                                    class="btn btn-primary w-100 py-3"
+                                                    type="submit">Book
+                                                    Now</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- About Start -->
-            <div class="container-fluid about py-5">
+            <div class="container-fluid about ">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-5">
@@ -1229,6 +1361,15 @@
 
             <!-- Template Javascript -->
             <script src="js/main.js"></script>
+            <script>
+                window.addEventListener('load', function () {
+                setTimeout(function(){
+                var myModal = new bootstrap.Modal(document.getElementById('contactModal'));
+                myModal.show();
+                 }, 5000); // 3000 ms = 3 seconds
+                 });
+            </script>
+
         </body>
 
     </html>
