--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
                                         style="letter-spacing: 3px;">Explore The
                                         Property</h4>
                                     <h3
-                                        class="display-6 text-md-start text-capitalize text-white mb-2">Let's
+                                        class="display-6 text-md-start mt-2 text-center text-capitalize text-white mb-2">Let's
                                         The Property Together!</h3>
-                                    <p class="mb-2 fs-5 text-md-start">Lorem
+                                    <p
+                                        class="mb-2 fs-5 text-md-start d-none d-sm-block">Lorem
                                         Ipsum is simply
                                         dummy text of the printing and
                                         typesetting industry. Lorem Ipsum has
@@ -125,7 +126,7 @@
                                         ever since the 1500s,
                                     </p>
                                     <div
-                                        class="d-flex align-items-center justify-content-start">
+                                        class="d-flex align-items-md-center  mt-4 justify-content-md-start justify-content-center">
                                         <a
                                             class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
                                             href="#">Discover Now</a>
@@ -197,9 +198,10 @@
                                         style="letter-spacing: 3px;">Explore The
                                         Property</h4>
                                     <h3
-                                        class="display-6 text-md-start text-capitalize text-white mb-2">Let's
+                                        class="display-6 text-md-start text-capitalize text-white mt-2 mb-2">Let's
                                         The Property Together!</h3>
-                                    <p class="mb-2 fs-5 text-md-start">Lorem
+                                    <p
+                                        class="mb-2 fs-5 text-md-start d-none d-sm-block">Lorem
                                         Ipsum is simply
                                         dummy text of the printing and
                                         typesetting industry. Lorem Ipsum has
@@ -207,13 +209,13 @@
                                         ever since the 1500s,
                                     </p>
                                     <div
-                                        class="d-flex align-items-center justify-content-start">
+                                        class="d-flex align-items-center mt-4 justify-content-md-start justify-content-center">
                                         <a
                                             class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5"
                                             href="#">Discover Now</a>
                                     </div>
                                 </div>
-                                <div class="form-section d-none d-sm-block"
+                                <div class="form-section d-none mt-4 d-sm-block"
                                     style="max-width: 450px;">
                                     <h2 class="text-white mb-3">Book A Perfect
                                         Apartment</h2>
