--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                             href="#">Discover Now</a>
                                     </div>
                                 </div>
-                                <div class="form-section d-none d-sm-block"
+                                <div class="form-section mt-4 d-none d-sm-block"
                                     style="max-width: 450px;">
                                     <h2 class="text-white mb-3">Book A Perfect
                                         Apartment</h2>
