--- a/index.html
+++ b/index.html
@@ -1025,37 +1025,31 @@
                     <div class="packages-img">
                         <img src="img/packages-3.jpg"
                             class="img-fluid w-100 rounded-top" alt="Image">
-                        <div
-                            class="packages-info d-flex border border-start-0 border-end-0 position-absolute"
-                            style="width: 100%; bottom: 0; left: 0; z-index: 5;">
-                            <small
-                                class="flex-fill text-center border-end py-2"><i
-                                    class="fa fa-map-marker-alt me-2"></i>Venice
-                                - Italy</small>
-                            <small
-                                class="flex-fill text-center border-end py-2"><i
-                                    class="fa fa-calendar-alt me-2"></i>3
-                                days</small>
-                            <small class="flex-fill text-center py-2"><i
-                                    class="fa fa-user me-2"></i>2
-                                Person</small>
-                        </div>
+
                         <div class="packages-price py-2 px-4">3 BHK</div>
                     </div>
                     <div class="packages-content bg-light">
                         <div class="p-4 pb-0">
-                            <h5 class="mb-0">Discover Japan</h5>
-                            <small class="text-uppercase">Hotel
-                                Deals</small>
-
+                            <h5
+                                class="mb-0 text-center price-text">Investment
+                                Starting for
+                                Retail Spaces</h5>
+                            <!-- <small class="text-uppercase">Hotel
+                                        Deals</small> -->
+                        </div>
+                        <div class="p-4 pb-0">
+                            <h5 class="mb-0 text-center">₹ 40 Lac*
+                                Onwards</h5>
+                            <!-- <small class="text-uppercase">Hotel
+                                        Deals</small> -->
                         </div>
                         <div class="row bg-primary rounded-bottom mx-0">
                             <div class="col-12 text-center px-0">
                                 <a href="#"
-                                    class="btn-hover btn text-white py-2 px-4">Read
-                                    More</a>
+                                    class="btn-hover btn text-white py-2 px-4">Download
+                                    Broucher
+                                </a>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -1063,37 +1057,30 @@
                     <div class="packages-img">
                         <img src="img/packages-3.jpg"
                             class="img-fluid w-100 rounded-top" alt="Image">
-                        <div
-                            class="packages-info d-flex border border-start-0 border-end-0 position-absolute"
-                            style="width: 100%; bottom: 0; left: 0; z-index: 5;">
-                            <small
-                                class="flex-fill text-center border-end py-2"><i
-                                    class="fa fa-map-marker-alt me-2"></i>Venice
-                                - Italy</small>
-                            <small
-                                class="flex-fill text-center border-end py-2"><i
-                                    class="fa fa-calendar-alt me-2"></i>3
-                                days</small>
-                            <small class="flex-fill text-center py-2"><i
-                                    class="fa fa-user me-2"></i>2
-                                Person</small>
-                        </div>
                         <div class="packages-price py-2 px-4">3 BHK</div>
                     </div>
                     <div class="packages-content bg-light">
                         <div class="p-4 pb-0">
-                            <h5 class="mb-0">Discover Japan</h5>
-                            <small class="text-uppercase">Hotel
-                                Deals</small>
-
+                            <h5
+                                class="mb-0 text-center price-text">Investment
+                                Starting for
+                                Retail Spaces</h5>
+                            <!-- <small class="text-uppercase">Hotel
+                                        Deals</small> -->
+                        </div>
+                        <div class="p-4 pb-0">
+                            <h5 class="mb-0 text-center">₹ 40 Lac*
+                                Onwards</h5>
+                            <!-- <small class="text-uppercase">Hotel
+                                        Deals</small> -->
                         </div>
                         <div class="row bg-primary rounded-bottom mx-0">
                             <div class="col-12 text-center px-0">
                                 <a href="#"
-                                    class="btn-hover btn text-white py-2 px-4">Read
-                                    More</a>
+                                    class="btn-hover btn text-white py-2 px-4">Download
+                                    Broucher
+                                </a>
                             </div>
-
                         </div>
                     </div>
                 </div>
