--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             </div>
 
             <!-- About Start -->
-            <div class="container-fluid about ">
+            <div id="about" class="container-fluid about ">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-5">
@@ -530,8 +530,8 @@
             </div>
             <!-- About End -->
 
-            <!-- Destination Start -->
-            <div class="container-fluid destination py-5">
+            <!-- Gallery Start -->
+            <div id="gallery" class="container-fluid destination py-5">
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
@@ -650,11 +650,10 @@
                     </div>
                 </div>
             </div>
-            <!-- Destination End -->
+            <!-- Gallery End -->
 
             <!-- Highlights section start -->
-            <!-- About Start -->
-            <div class="container-fluid about py-5">
+            <div id="highlights" class="container-fluid about py-5">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6"
@@ -732,11 +731,10 @@
                     </div>
                 </div>
             </div>
-            <!-- About End -->
             <!-- Highlights section end -->
 
             <!-- Explore our Amenities Start -->
-            <div class="container-fluid ExploreTour py-5">
+            <div id="amenities" class="container-fluid ExploreTour py-5">
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
@@ -782,10 +780,8 @@
                                                     <h5
                                                         class="text-white text-uppercase mb-2">Clubhouse
                                                     </h5>
-
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
@@ -799,10 +795,8 @@
                                                         class="text-white text-uppercase mb-2">Cricket
                                                         Sports
                                                     </h5>
-
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
@@ -816,10 +810,8 @@
                                                         class="text-white text-uppercase mb-2">Green
                                                         Landscape
                                                     </h5>
-
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
@@ -833,7 +825,6 @@
                                                         class="text-white text-uppercase mb-2">Kid's
                                                         Zone
                                                     </h5>
-
                                                 </div>
                                             </div>
                                             <!-- <div class="tour-offer bg-warning">50%
@@ -868,8 +859,8 @@
             </div>
             <!-- Explore our Amenities Start -->
 
-            <!-- Packages Start -->
-            <div class="container-fluid packages py-5">
+            <!--price Packages Start -->
+            <div id="price" class="container-fluid packages py-5">
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
@@ -1088,7 +1079,7 @@
             <!-- Packages End -->
 
             <!-- location Start -->
-            <div class="container-fluid about py-5">
+            <div id="location" class="container-fluid about py-5">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6"
@@ -1104,7 +1095,7 @@
                         </div>
                         <div class="col-lg-6"
                             style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                            <h5 class="section-about-title pe-3">Highlights</h5>
+                            <h5 class="section-about-title pe-3">Location</h5>
                             <h1 class="mb-4">Welcome to <span
                                     class="text-primary">Real Estate</span></h1>
                             <div class="row gy-2 gx-4 mb-4">
@@ -1166,8 +1157,8 @@
             </div>
             <!-- location end-->
 
-            <!-- Tour Booking Start -->
-            <div class="container-fluid booking py-5">
+            <!-- contact Start -->
+            <div id="contact" class="container-fluid booking py-5">
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6">
@@ -1259,7 +1250,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Tour Booking End -->
+            <!-- contact End -->
 
             <!-- Footer Start -->
             <div class="container-fluid footer py-5">
