--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                                         class="big-img shadow-lg">
                                     <img src="img/about-imgs.jpg"
                                         alt="Small Image"
-                                        class="small-img img-fluid d-none d-sm-block">
+                                        class="small-img img-fluid ">
                                 </div>
                             </div>
                         </div>
