--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                                 href>Read More</a>
                         </div>
                         <div class="col-lg-6"
-                            style="display: flex; justify-content:center;">
+                            style="display: flex; justify-content:end;">
                             <div class="h-100">
                                 <div class="frame">
                                     <img src="img/about-imgs.jpg"
@@ -763,9 +763,8 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Library
+                                                        class="text-white  mb-2">Library
                                                     </h5>
-
                                                 </div>
                                             </div>
                                         </div>
@@ -778,7 +777,7 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Clubhouse
+                                                        class="text-white  mb-2">Clubhouse
                                                     </h5>
                                                 </div>
                                             </div>
@@ -792,7 +791,7 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Cricket
+                                                        class="text-white  mb-2">Cricket
                                                         Sports
                                                     </h5>
                                                 </div>
@@ -807,7 +806,7 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Green
+                                                        class="text-white  mb-2">Green
                                                         Landscape
                                                     </h5>
                                                 </div>
@@ -822,7 +821,7 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Kid's
+                                                        class="text-white  mb-2">Kid's
                                                         Zone
                                                     </h5>
                                                 </div>
@@ -840,7 +839,7 @@
                                             <div class="national-content">
                                                 <div class="national-info">
                                                     <h5
-                                                        class="text-white text-uppercase mb-2">Modular
+                                                        class="text-white  mb-2">Modular
                                                         Kitchen
                                                     </h5>
                                                     <!-- <a href="#"
@@ -1006,7 +1005,6 @@
                                             class="btn-hover btn text-white py-2 px-4">Read
                                             More</a>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -1190,8 +1188,9 @@
                                 More</a>
                         </div>
                         <div class="col-lg-6">
-                            <h1 class="text-white mb-3">Book A Tour Deals</h1>
-                            <p class="text-white mb-4">Get <span
+                            <h1 class="text-white mb-3">Explore Our Projects
+                                Deals</h1>
+                            <p class="text-white  mb-4">Get <span
                                     class="text-warning">50% Off</span> On Your
                                 First Adventure Trip With Travela. Get More Deal
                                 Offers Here.</p>
@@ -1328,10 +1327,8 @@
                 setTimeout(function(){
                 var myModal = new bootstrap.Modal(document.getElementById('contactModal'));
                 myModal.show();
-                 }, 5000); // 3000 ms = 3 seconds
+                 }, 5000); 
                  });
             </script>
-
         </body>
-
     </html>
